--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,6 +1,6 @@
 {
   "container": {
-    "startCommand": "gunicorn -b 0.0.0.0:8000 app:app"
+    "startCommand": "gunicorn -k sync -b 0.0.0.0:8000 app:app --forwarded-allow-ips=*"
   },
   "ports": [
     {
@@ -9,3 +9,4 @@
     }
   ]
 }
+
